# Chatapp

./: Cargo.toml  README.md
src/: client.rs  error.rs  hub.rs  lib.rs  main.rs  proto.rs  server.rs
src/model/: feed.rs  message.rs  user.rs
