[package]
name = "Messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
features = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
